Edit county maps. Implement location titles.

--- a/contaePages/naContae1.html
+++ b/contaePages/naContae1.html
@@ -6,36 +6,37 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-~~~~~~rr..~~~~~~~~~~~..~~~~~~~~~~~~~~~~~~~
-~~~~~~rrr....~~~~~~~.......~~~~~~~~~~~~~~~
-~~~~~~r.......*~~~.....................~~~
-~~~~~~r*......**.............*...........~
-~~~~~~r**......**..........***...........~
-~~~~~~r.**......****...*****..............
-~~~~~~r..**.......******..................
-~~~~~rr..**.....***..***..................
-~~~rrrr..*....***......**................~
-~~~r.....**..**.........**...............~
-~~~r.....*****...........**..............~
-~~~r.....**..........~~...***...........~~
-~~~r....**......^.~~~~~~~~.............~~~
-~~~~...**.....^^^.~~~~~~~~~~~.........~~~~
-~~~~...**.....^.^..~~~~~~~~~~~~~~~~~~~~~~~
-~~~.....**....^^^^.~~~~~~~~~~~~~~~~~~~~~~~
-~~.......*...^^^^^^~~~~~~~~~~~~~~~~~~~~~~~
-~~.......**.^^^^^~~~~~~~~~~~~~~~~~~~~~~~~~
-...........**.~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-.............~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-............~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-...........~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-..........~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-~........~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-~~~......~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~...~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-
-
-    
+xxxxxrrrrr.....xxxxxxxxxxx..xxrxxxxx~~xxxxxxxxxxxxxxxx....xxxxxxxxxx
+xxxrrrr..........Uxxxxxxx....rr.xxxxx~xxxxxxxxxxxxx.........xxxxxxxx
+xxrrr..W...........*xxx.....rr........~~....xxxx..............xxxxxx
+xrrr........*......**......rr.....*....~~.....x.................xxxx
+xrr.........**......**...rrr....***.....~~...................P....xx
+rrr..........**......*rrrr..*****........~~............~~~~~~~~~~~~~
+r.............**.rrrrrr******.............~.....~~~~~~~~...........x
+.....Q......rrrrrr...***..***..........~~~~~~~~~~..................x
+x.......rrrrr.*....***......**~~~~~~~~~~.........................xxx
+xx...rrrr.....**..**....~~~~~~~...................................Tx
+xx.rrr........**~~~~~~~~~.....**................................xxxx
+xrrr...~~~~~~~~~~..............****...........................xxxxxx
+~~~~~~~~.....**......^.........xx..*..Y.....xxxxx...R.......xxxxxxxx
+............**.....^^^..........xxx.*......xxxxxxx........xxxxxxxxxx
+x...........**.....^.^..........xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xx...........**....^^^^.....xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxx...........*...^^^^^^.....xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxx.........**.^^^^^.........xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxx..E........**.............xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxx..........................xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxx..........................xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxx..........................xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxx..............xxxxx....xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxx............xxxxxxxx..xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxx.I........xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxx........xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxx......xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xx...xx......xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxx.........xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxx....O.xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxx.....xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
     </div>
 
       <body>
