--- a/contaePages/naContae11.html
+++ b/contaePages/naContae11.html
@@ -6,37 +6,37 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-~~~~~~~~~~~.....~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~.........~~~~~~~~....~~~~
-~~~~~~~~~~~............~~~~.*....~~~
-~~~~~~~~~~~..^^^^^^.........*.....~~
-~~~~~~~~~~...^^^^^^^^.......**.....~
-~~~~.......^^MMMMMMM^^.......*.....~
-~~~......^^.rrrrr^MM^^^^^....**....~
-~~......^^^rr^M^r^^^r^^^^......*...~
-~......rrrrr^MM^rrrrr^^^^......*...~
-~rrrrrrr^^^^..MMMMM^^^.^^......**..~
-~...^^^^^^MMMMMMMMMM^^^^^.......*..~
-.....*^^^^^^MMMMMMMMM^^^^.......*..~
-......*....MMMMM^^^^^^^.........**.~
-~.....***^^^MMMMM...^............*.~
-~~~.....***..^MM^^^..............*.~
-~~~~~.....***^^^^................*.~
-~~~~~~~~~....***^^...............*..
-~~~~~~~~~~~~...**^.............***..
-~~~~~~~~~~~~~...*^^^..........**....
-~~~~~.~~~~~~~~.**^^...........*....~
-~~~~......~~~~**^^^...........*....~
-~~~........^***^^..................~
-~~~....^^^^**^^..................~~~
-~~~........*^.................~~~~~~
-~~~~.......*.................~~~~~~~
-~~~~~........................~~~~~~~
-~~~~~~..........~~~~~~~~~....~~~~~~~
-~~~~~~~~~......~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~...~~~~~~~~~~~~~~~~~~~~~
-
-
+xxxxxxxxxxxxxxxxxxxxx............~~~~~~~~*........88888888888888888888
+xxxxxxxxxxxxxxxxxxxx.............~~~~~~~~*.....R~888888888888888888888
+xxxxxxxxxxxxxxxxxxx.T~..............~~~~.*......~888888888888888888888
+xxxxxxxxxxxxxxxx..~~~~^^..^^^^^^.........*.....E~888888889888888888888
+xxxxxxxxxxx........~~^^...^^^^^^^^.......**......888808888888888888888
+xxxxxxxx....Y...........^^MMMMMMM^^.......*.......88888888888888888888
+xxxxxxxxx.............^^.rrrrr^MM^^^^^.^..**.......8888888888888888888
+xxxxxx...............^^^rr^M^r^^^r^^^^.^....*.......888888888888888888
+xxxxx....U..........rrrrr^MM^rrrrr^^^^.^.^..*.......888888888888888888
+xxxx............rrrrr^^^^..MMMMM^^^.^^^.^...**........8898888888888888
+xx..............r^^^^^^MMMMMMMMMM^^^^^.^.^...*........8888888888888888
+xxxx........rrrrr.*^^^^^^MMMMMMMMM^^^^..^....*........8888888888888888
+xxxxxx......r......*....MMMMM^^^^^^^...^.....**.......8888888888888888
+xxxxxxxxx..rr......***^^^MMMMM...^....^.......*......88888888888888888
+xxxxxxxxxxxr.........***..^MM^^^..............*.....888888888088888888
+xxxxxxxxxxxx...........***^^^^................*....8888988888888888888
+xxxxxxxxxxxxxxx...........***^^...............*....8888888888888888888
+xxxxxxxxxxxxxxxxxxxxxxx.....**^.............***..Q88888888888888888888
+xxxxxxxxxxxxxxxxxxxxxxxxxx...*^^^..........**......8888888888088888888
+xxxxxxxxxxxxx......xxxxxxxx.**^^...........*......88889888888888888888
+xxxxxxxxxx.............xxxx**^^^...........*......88888888888888888888
+xxxxxxxxxx..............^***^^............*......888888888888888888888
+xxxxxxxxx...........^^^^**^^.............*.......888888888888888888888
+xxxxxxxxxx.....I........*^.......P.......*.....~~888888888888888888888
+xxxxxxxxxxxxx...........*...............*.....~88888898888888888888888
+xxxxxxxxxxxxxxx........................*....~~888888888888888888888888
+xxxxxxxxxxxxxxxxxO................x....*...W~8888888888888888888888888
+xxxxxxxxxxxxxxxx...............xxxxxx.*....~88888880888888888888888888
+xxxxxxxxxxxxxxxxx.............xxxxxxxx....~~88888888988888888888888888
+xxxxxxxxxxxxxxxxxxx.........xxxxxxxxxxxxxx8888888888888888888888888888
+xxxxxxxxxxxxxxxxxxxx.....xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
     
     </div>
 
