--- a/contaePages/naContae12.html
+++ b/contaePages/naContae12.html
@@ -6,36 +6,37 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-~~~~~~~~~~~~~~~~..~~~~~~~~~~~~
-~~~~~~~~~~......*.~~~~~~~~~~~~
-~~~~~~~~~......**..r~~~~~~~~~~
-~~~~~~.........*...rrr~~~~~~~~
-~~~~~~.........****..rr~~~~~~~
-~~~~~~~.....rr.*..**..rr~~~~~~
-~~~~..*.....rrrr...**..rrr~~~~
-~~~~..***...rr.rrr..**...r~~~~
-~~~~~~..***....*.rrr.....r~~~~
-~~~~~.....***..*...rrrr.r~~~~~
-~~......********...^^^rrr~~~~~
-~.....***......**...^^^^r~~~~~
-.....**....~~...**...^^^rr~~~~
-~...**...~~~~~...****..^^rr~~~
-~..**..~~~~~~~~...*.***^^^rr~~
-~~~~~~~~~~~~~~~....*..****.rr~
-~~~~~~~~~~~~~~~~...**.......rr
-~~~~~~~~~~~~~~~~~...*.......rr
-~~~~~~~~~~~~~~~~~...*.......rr
-~~~~~~~~~~~~~~~~~~..*.......~r
-~~~~~~~~~~~~~~~~~~..*.....**rr
-~~~~~~~~~~~~~~~~~~..*...**..rr
-~~~~~~~~~~~~~~~~~~..*..**...rr
-~~~~~~~~~~~~~~~~~~..*..*....rr
-~~~~~~~~~~~~~~~~~~.**......~~~
-~~~~~~~~~~~~~~~~~~........~~~~
-~~~~~~~~~~~~~~~~~~.......~~~~~
-~~~~~~~~~~~~~~~~~~~.....~~~~~~
-
-    
+xxxxxxxxxxxxxxxxxxxx~~~~~~............~~~~~~~~xxxxxxxxxxxxxx
+xxxxxxxxxx......xxxx~~~.............*...rr........xxxxxxxxxx
+xxxxxxxxxxx........................**..^^r~~O.......xxxxxxxx
+xxxxxxxxxxx........................*...^^rr.........xxxxxxxx
+xxxxxxx............................****..^^rr......xxxxxxxxx
+xxxxx...........................rr.*..**.^^rrr.P...xxxxxxxxx
+xxxxxxx...................*.....rrrr...**..^^rr.....xxxxxxxx
+xxxxxxxxxx................***.E.rr.rrr..**R..^rr...xxxxxxxxx
+xxxxxxxxxx..................***....*.rrr..^^^^rr...xxxxxxxxx
+xxxxxxxxxxxx..................***..*...rrrrrrrr~...xxxxxxxxx
+xxxxxxxx....................********...^^^^^rrr...xxxxxxxxxx
+xxxxxxxx..................***......**...^^^^^^r..xxxxxxxxxxx
+xxxxxxxxx................**.........**...^^^^^rr..xxxxxxxxxx
+xxxxxxx.................**.......Q...****..^^^^rr..xxxxxxxxx
+xxxxxx................................*.***^^^^^rr..xxxxxxxx
+xxxx..Y.....xxx..xxxxx..T..............*..****...rr.xxxxxxxx
+xxxx....xxxxxxxxxxxxxxxx...............**.........rrxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxx...............*.........rrxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxx..............*I........rrxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxx.............*.......~..~xxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxx............*.....**r..~~xxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx........U.*...**..r..~~xxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx..........*..**...r..~xxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx........W*..*....r..~xxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.......**......~~xxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.............~xxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx..........~xxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.....~xxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
     </div>
 
       <body>
