--- a/contaePages/naContae13.html
+++ b/contaePages/naContae13.html
@@ -6,37 +6,37 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-~~~~~~~~~~~~~~~~~~~~~~~~~........~~~~~~~
-~~~~~~~~~~~~~~~~~~~~~~~~..........~~~~~~
-~~~~~~~~~~~~~~~~~~~~~~..............~~~~
-~~~~~~~~~~~~~~~~~...................~~~~
-~~~~~~~~~~~~..........********......~~~~
-~~~~~~~~~~~~..........*......*......~~~~
-~~~~~~~~~~~~..........*..^^^.***....~~~~
-~~....................*..^^^^..*....~~~~
-......................*..^^^^..***..~~~~
-......****.......*****...^^^^....*..~~~~
-....**....**...**........^^^^^...*....~~
-..**........***........^^^MMM^...***..~~
-....**.................^^^MMM^.....*....
-~.....**...............^^^MMM^......*...
-~~~.....*************..^^^^^^^......*...
-~~~~~................***............*...
-~~~~~~~.................****.......*....
-~~~~~~~~~~..................***..**.....
-~~~~~~~~~~~~....~~~~..^^^......**.......
-~~~~~~~~~~~~~~~~~~~~..^^^^......*.......
-~~~~~~~~~~~~~~~~~...^^MMM^^^^...*.......
-~~~~~~~~~~~~~~..^^^MMMMM^^^^^..**.......
-~~~~~~~~~~~~~~..^^^^^^^^^^...*****......
-~~~~~~~~~~~~~~..............**...****.~~
-~~~~~~~~~~~~~~~~~~~~........*.......*.~~
-~~~~~~~~~~~~~~~~~~~~~~~~~...*.......*.~~
-~~~~~~~~~~~~~~~~~~~~~~~~~...********..~~
-~~~~~~~~~~~~~~~~~~~~~~~~~~............~~
-~~~~~~~~~~~~~~~~~~~~~~~~~~~.......~~~~~~
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
+8888888888888888888888888888888888888888888888......rxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxx888888..888888888888888888.888........rrxxxxxxxxxxxxxxx
+xxxxxxxxxxxx88888888....8888.........................rrxxxxxxxxxxxxxx
+xxxxxxxxxxxx88888888.W................................rrxxxxxxxxxxxxx
+xxxxxxxx888888888888~.....................********.....rrxxxxxxxxxxxx
+xxxxxxxx88888888888.......................*......*......rrxxxxxxxxxxx
+xxxxx888888888888...E.....................*..^^^.***.....rxxxxxxxxxxx
+xxxx~~8888888888..........................*..^^^^..*....rrxxxxxxxxxxx
+xx...r88888888............................*..^^^^..***..rrxxxxxxxxxxx
+x....rrrQ.................****.......*****...^^^^....*...rrxxxxxxxxxx
+x...r................R..**....**...**........^^^^^...*....rrxxxxxxxxx
+x..rrr................**........***........^^^MMM^...***...rxxxxxxxxx
+xxxxrrr.................**.................^^^MMM^.....*...rrxxxxxxxx
+xxxrrr....................**...............^^^MMM^......*...rrxxxxxxx
+xxrrxxxxxx.......Y..........*************..^^^^^^^......*....rrxxxxxx
+rrrxxxxxxxxxx.........................T..***............*.....rrxxxxx
+xxxxxxxxxxxxxxx.............................****.......*......rrxxxxx
+xxxxxxxxxxxxxxxxxx..............................***..**.......rrxxxxx
+xxxxxxxxxxxxxxxxxxxx......................^^^......**........rrrxxxxx
+xxxxxxxxxxxxxxxxxxxxxx....................^^^^......*........rrxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxx.................^^MMM^^^^...*........rxxxxxxx
+xxxxxxxxxxxxxxxxxx..................^^^MMMMM^^^^^..**........rxxxxxxx
+xxxxxxxxxxxxxxxxxxx.................^^^^^^^^^^..U*****......rrxxxxxxx
+xxxxxxxxxxxxxxxxxx..............................**...****...rrxxxxxxx
+xxxxxxxxxxxxxxxxxxx.......xx....................*.......*...rxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxx...................*......I*...rxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.................********....rxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx..................O......rrxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.........P.............r~~~xxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx...........~~~~~~~~~~~~~~~~xxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx~~~~~~~~~~~~~~~~~~xxx
     
     </div>
 
