--- a/contaePages/naContae14.html
+++ b/contaePages/naContae14.html
@@ -7,34 +7,34 @@
     </head>
     <div id="mapdata">
 
-888888888888888888888~~~^^..~~~~~~~~~~~~~~~
-8888888888888888888z~.^^^^^^^.~~~~~~~~~~~~~
-88888888888888888z...^^^^^^**^..~~~~~~~~~~~
-8888888988888888z....^^^^^**^^^..~~~~~~~~~~
-8988888888888888z...*******^^....~~~~~~~~~~
-88888888888898888z.......*^^^...~~~~~~~~~~~
-88888z..888888888888z....*......~~~~~~~~~~~
-888z.......88888888z.....*..rr..~~~~~~~~~~~
-888z.........887888z.....*..rrr..~~~~~~~~~~
-888z....**....888888z....*rrrrr..~~~~~~~~~~
-888z....***...............**rr...~~~~~~~~~~
-z.......*..***.....*.......**....~~~~~~~~~~
-........*....*******........**......~~~~~~~
-........*..^^^^^...**.....**.**........~~~~
-........~..^M.^^^^...******...***.......~~~
-z....888z.^^MM^^^^........*****..****.....~
-88888888z.^^^MM^^^^.......**.^.**...**.....
-8888880888z^^.^^^^^......**..^^.*....***...
-888888888z.^^^^..........*...^^**.^........
-888888888z..^^...........*....^*^^^..~~~~~~
-888888888z...............*....**^^^.~~~~~~~
-888880888z.......888.....*...**^^^.~~~~~~~~
-8888888888z..88888~8z.......**.^^..~~~~~~~~
-88888888888888888888z...rr.**.....~~~~~~~~~
-8888888888888888888z....rrrrr.....~~~~~~~~~
-8888888808888888788z.....rrrrr....~~~~~~~~~
-8888888888888888888z~...........~~~~~~~~~~~
-888888888888888888z~~~....~~~~~~~~~~~~~~~~~
+88888888888888888888888888~~~^^...........~~~~~~xxxxxxxxxxxxxxx
+8888888888888888888888zY^~.^^^^^^^........~~....xxxxxxxxxxxxxxx
+88888888888888888888z^^...^^^^^^**^..............xxxxxxxxxxxxxx
+888888888888988888z^^^....^^^^^**^^^.............xxxxxxxxxxxxxx
+8888889888888888z^^^^^...*******^^...............xxxxxxxxxxxxxx
+888ZMM^888888888898888z.......*^^^..............xxxxxxxxxxxxxxx
+8888888888z..8888888z^^^^^....*................~xxxxxxxxxxxxxxx
+88888888zT......88888888z.....*..rr............~xxxxxxxxxxxxxxx
+8888z^...........P887888zQ....*..rrr............xxxxxxxxxxxxxxx
+888z^........**....888888z....*rrrrr............xxxxxxxxxxxxxxx
+88z^.........***.....888.......**rr...............xxxxxxxxxxxxx
+88z^........W*..***.....*.......**................xxxxxxxxxxxxx
+8z^..........*....*******E.......**...............xxxxxxxxxxxxx
+z^...........*..^^^^^...**.....**.**...............xxxxxxxxxxxx
+z^...........~..^M.^^^^...******...***..............xxxxxxxxxxx
+z^.............^^MM^^^^........*****..****...........xxxxxxxxxx
+xxxxxx.....xxx.^^^MM^^^^.......**.^.**...**...........xxxxxxxxx
+xxxxxxxxxxxxxxxx^^.^^^^^......**..^^.*....***U.........xxxxxxxx
+xxxxxxxxxxxxxxx.^^^^..........*...^^**.^...................xxxx
+xxxxxxxxxxxxxxx..^^....O....I.*....^*^^^...................Yxxx
+xxxxxxxxxxxxxxx...............*....**^^^.....................xx
+xxxxxxxxxxxxxxx...............*...**^^^.......................x
+xxxxxxxxxxxxxxxx.................**.^^.........................
+xxxxxxxxx...........R........rr.**.....................xxxxxxxx
+xxxxxxxx.........xxxxxxxx....rrrrr..................xxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxx..........rrrrr..........~~....xxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxx......xxx................~~~~x.xxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx......xxxxx~~~~~~xxxxxxxxxxxxxxx
 
 
     </div>
