--- a/contaePages/naContae15.html
+++ b/contaePages/naContae15.html
@@ -7,37 +7,37 @@
     </head>
     <div id="mapdata">
 
-~~~~~~~~.MMMMM.~~~~~~~~~~~~~~~~~
-~~~~~~~.^^MMMM..~~~~~~~~~~~~~~~~
-~~~~~~.*^MMMM^..~~~~~~~~~~~~~~~~
-~~~~~..**^M^^^..~~~~~~~~~~~~~~~~
-~~~...^^*^^^^....~~~~~~~^~~~~~~~
-~~~..^^^*^^......~~~~~.**^.~~~~~
-~~~..^^^^**.....~~~~..**^^..~~~~
-~~..^.^^..*.....~~~..**^^^..~~~~
-~~..^^^...*....~~~..**^^^^.~~~~~
-~~..^^^...*.........*.^....~~~~~
-~~...^^..**...rr...**.^^..~~~~~~
-~~...**.**.....rrrrr......~~~~~~
-~~~....**........**rr^^...~~~~~~
-~~~~~~...........*..r^^....~~~~~
-~~~~~~~..........*rrr^^^...~~~~~
-~~~~~~.........rrr^^^^^^^...~~~~
-~~~~~~......***r****^^.......~~~
-~~~~.......**..rrr^***........~~
-~.........**.....rr*^.******...~
-.........**.....rr.**...........
-..........****rrr^^.*...........
-..........*..rr^^^^..**.........
-.......****.rr.^^^^...*rrrr.....
-~~..........r**^^^^...rr~~rrrr..
-~~~~........rr*.......r~~~~~~~~~
-~~~~.........rrr.....rr~~~~~~~~~
-~~~............rrrrrrr.~~~~~~~~~
-~~~....................~~~~~~~~~
-~~~~.......~~~~........~~~~~~~~~
-~~~~~.....~~~~~~....~~~~~~~~~~~~
-
+xxxxxxxxxxxxxxxxxxxxrrr..MMMMM..xxxxxxxxxxxxxrxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxrrrr...^^MMMM..xxxxxxxxxxxx.r..xxxxxxxxxxxx
+xxxxxxxxxxxxxxrrrr..I..*^MMMM^..xxxxxxxxx..Urr..xxxxxxxxxxxx
+xxxxxxxxxxxxxrrrrr.....**^M^^^..xxxxxxx...rrr......xxxxxxxxx
+xxxxxxxxxxxrrr........^^*^^^^..xxxxxx..rrr.........xxxxxxxxx
+xxxxxxxxxrrr.........^^^*^^...xxxxxx..rr*^.........xxxxxxxxx
+xxxxxxxrrrO..........^^^^**....xxx...r**^^.........xxxxxxxxx
+xxxxxxxrr...........^.^^..*........rr**^^^........xxxxxxxxxx
+xxxx~~~~~~~.........^^^...*.......rr**^^^^.......xxxxxxxxxxx
+xx~~~~~~~~~~........^^^...*....rrrr.*.^..........xxxxxxxxxxx
+~~~~~~~~.............^^..**...rr...**.^^..........xxxxxxxxxx
+~~~~.................**.**.....rrrrrE..............xxxxxxxxx
+~~.....................**........**rr^^............xxxxxxxxx
+xxxxx............................*..r^^.............xxxxxxxx
+xxxxxxxxxx.......................*rrr^^^.............xxxxxxx
+xxxxxxxxxxxxxxx................rrr^^^^^^^.............xxxxxx
+xxxxxxxxxxxxxxxx............***r****^^................xxxxxx
+xxxxxxxxxxxxxxx............**..rrr^***.................xxxxx
+xxxxxxxxxxxxxxx...........**.....rr*^.******............xxxx
+xxxxxxxxxxxxx............**.....rrW**...................xxxx
+xxxx..xxxx................****rrr^^.*....................xxx
+xxxxx..^^^^^^..^^.....Q...*..rr^^^^..**.............^^...xxx
+xxxxxxx^MMMMMMM..^^....****.rr.^^^T...*...........^^MYM...xx
+xxxxxxxxxxxMMMMMM.^.........r**^^^^.................^^....xx
+xxxxxxxxxxxxxRMMMMM^^^^.....rr*..........................xxx
+xxxxxxxxxxxxxxxMMMMMM.^......rrr..................rrrrrrrrrr
+xxxxxxxxxxxxxxxxMMMM^M.^^......rrrr..........rrrrrrxxxxxxxxx
+xxxxxxxxxxxxxxxxMMMMM^^...........rr...Prrrrrxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxMMM^.^.............rrrrrrxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxMMM..........~~.........~xxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxx......xxxxxxx.......xxxxxxxxxxxxxxxxxxxx
 
     
     </div>
