--- a/contaePages/naContae17.html
+++ b/contaePages/naContae17.html
@@ -6,33 +6,37 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-
-~~~~~~~~~~~~~~~~~~~~~r~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~~~~rr.rrr~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~rrr.....rrr~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~r...^MMM^^rrrr~~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~r..^MMMMMMMMMrrrr~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~...^MMMMMMMMMMM.rrrrr~~~~~~~~~~~~~~~~~~
-~~~~~~~~~^^^~~~~...MMMMMMMMM^MMMM...rrrrrrrrrrrrrrr~~~~
-~~~~~~~..^^^^.~~~..MMMMMM^^MMMMMM^^......***......rrrr~
-~~~~~...^^^^^^.......^^.MMMMMMMMMMM^^..***............~
-rrrrrrr...^^..........^^^MMMMMMMMMMMM..*..............~
-......rr..^^^^rrrrrrr..^^^^^^^^MMMMM^**...............~
-~.......rrrrrrr^...^rrr^^^^.......****.................
-~~.............^^^^^..r.......****....................~
-~~~.............*****.r..******....~~~~~~~...........~~
-~~~~.......******...**rr**..**...~~~~~~~~~~~~.....~~~~~
-~~~~~.....^^^^^........rr..**...~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~....^^^^^^^^.....rr.**...~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~..^^^^^^^^...r.**....~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~..^^^^^^^.rr**.....~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~.^^^***.r**......~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~.^^^^^.r.......~~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~.............~~~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~~~.........~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~~~~~.~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-    
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxrrrxxxxxxxxxxxxxxxxxxxxrrrrrrrrrrrrrrxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxrrrrrxxxxxxxxxxxxxxxxrU...........rrrrrxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxx..rrrxxxxxxxxxxxxxrr...............rrrrxxxxxxxxxxxx
+xxxxxxxxxxxxxxxx.....rrrrrrrrrrrrrrr...................rrxxxxxxxxxxx
+xxxxxxxxxxxxxxx..^^^^...................................rrrrrrrrrrxx
+xxxxxxxxxxxxxx...^^...........................R....******........rrr
+xxxxxxxxxxxxx..^.................P.................*..............Yr
+xxxxxxxxxxE..^^^....^MMO^^^^^^.................*****...............8
+xxxxxx....^^^^^^...^MMMMMMMMM^^^^..............*...T..............88
+......^^^^^^^^^^...^MMMMMMMMMMM.^^^^^.........**..................88
+.........^^^^^^^...MMMMMMMMM^MMMM...........***..................888
+.........^^^^^^^...IMMMMMMMM^MMMM........****....................888
+.........^^^^.^^^..MMMMMM^^MMMMMM^^......*.....................88888
+W.......^^^^^^.......^^.MMMMMMMMMMM^^..***..................88888888
+rrrrrrr...^^..........^^^MMMMMMMMMMMM..*........88888888888888888888
+......rr..^^^^rrrrrrr..^^^^^^^^MMMMM^**.......8888888888888888888888
+x......rrrrrrrr^...^rrr^^^^.......****.....8888888888888888889888888
+xx.............^^^^^..r.......****........88887888888888988888888888
+xxx.............*****.r..******....~~~888888888888888888888888888888
+xxxx.......******...**rr**..**...~~~88888888988888888888888888888888
+xxxxx.....^^^^^........rr..*Q...~88889888888888888888898888888888888
+xxxxxx....^^^^^^^^.....rr.**...~~88888887888888888888888888888888888
+xxxxxxxxxx..^^^^^^^^...r.**....~~88898888888888888889888888888888888
+xxxxxxxxxxxx..^^^^^^^.rr**.....~~87888888888888888888888888888888888
+xxxxxxxxxxxxxx.^^^***.r**......~~88888888888898888888888888888888888
+xxxxxxxxxxxxxxx.^^^^^.r.......~~888888888888888888888888888888888888
+xxxxxxxxxxxxxxxxx.....r......~88888888888888888888888888888888888888
+xxxxxxxxxxxxxxxxxx....r....~8888888888888888888889888888888888888888
+xxxxxxxxxxxxxxxxxxxx.~r~~~888888888888888888888888888888888888888888
+xxxxxxxxxxxxxxxxx888788888888888888888888888888888888888888888888888
     </div>
 
       <body>
