--- a/contaePages/naContae18.html
+++ b/contaePages/naContae18.html
@@ -6,38 +6,37 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-
-~~~~~~~~~~~~~~~~~~~.^^..~~~~~~~~~
-^^^^^....~~~~~~~~..^^^^^.~~~~~~~~
-^^^^^^**..~~~~~~...^^^^^..~~~~~~~
-^^^^^^^**...~~~....^^^^*^.~~~~~~~
-....^^^^**.........^^^^*^..~~~~~~
-~~....^^^**........^^***...~~~~~~
-~~~~......**......****.....~~~~~~
-~~~~~......**....**........r~~~~~
-~~~~~~......**..**.........r~~~~~
-~~~~~~~......****..........rr~~~~
-~~~~~~~~......***********...rr~~~
-~~~~~~~~......***.......****.rr~~
-~~~~~~~~~....**.*..........*..r~~
-~~~~~~~~~....*..**........**..r~~
-~~~~~~~~~...**...**.......*...rr~
-~~~~~~~~~.**......****..**.....r~
-~~~~~~~~~.*........*.****......rr
-~~~~~~~~~..........**.....^^^^^.r
-~~~~~~~~~...........*....^^^^^^.r
-~~~~~~~~~...........**...^^^^^..r
-~~~~~~~~~~~...^^.....**.....^^..r
-~~~~~~~~~~~...^^^^^^..*.........r
-~~~~~~~~~~~~..^^^^^^^.*........rr
-~~~~~~~~~~~~...^^^^^^^**.......r~
-~~~~~~~~~~~~...^^^^^^^^**.....rr~
-~~~~~~~~~~~~~....^^^^^^.*....rr~~
-~~~~~~~~~~~~~~..r....^^^*....r~~~
-~~~~~~~~~~~~~~~~rrr.....*....r~~~
-~~~~~~~~~~~~~~~~~~rr....*....r~~~
-~~~~~~~~~~~~~~~~~~~rrrrrrrrrrrrr~
-
+xxxxxxxxxxxxxxxrxxxxxxxxxxxxxxxx...*.xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxx^^^^.xrrxxxxxxx~.xxx^  ^.*....xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxx^^^^^^**rxxxxx~~...^^^^^**......xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxx^^^^^^^*rrr.~~~....^^^^*^........xxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxx....^^^^**rr.......^^^^*^........xxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxx.......^^^**rr......^^***........xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxx..........**rr....****.............xxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxx..........**rr..**..................xxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxx..........**rr**.....................xxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxx..........**rrrr......................xxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxx..........***Qr******.................xxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxx.........***.rrrr..****..............xxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxx.........**.*....rrr...*.................xxxxxxxxxxxxxxxx
+xxxxxxxxxxx..........*..**.W...r..**...............xxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxx........**...**....rr.*..............xxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxx....**......****.r**...............xxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxx...**........*.**r*..E...............xxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxx..***..........**..r..^^^^^....T^........xxxxxxxxxxxxxxxx
+xxxxxxxxxxxxx**.............*..rr^^^^^^...^.^.........xxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxI.............**..rrR^^^...............xxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxx.......^^.....**..rrr^^...............xxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxx......^^^^^^..*....rrr..............xxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxx......^^^^^^^.*......rrrrrr........xxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxx........^^^^^^^**I..........rr...Yxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxx.......^^^^^^^^**...........r...xxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxx........^^^^^^.*...........rrr~xxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxx......r....^^^.............U~~xxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxx....rrr.....xxx.....^....~~xxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxx.........xxxx....^P..~~~~xxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxx.....xxxxxx....~~~~~~~xxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx8898898~xxxxxxxxxxxxxxxxxxxxxx
     </div>
 
       <body>
