--- a/contaePages/naContae19.html
+++ b/contaePages/naContae19.html
@@ -6,37 +6,37 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-~~~~~~~~~~~~~~~~~.^^^.....~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~.^^.^^.....~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~.^^^^^......~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~.^^^^^^^....*~~~~~~~~~~~~~~~
-~~~~......~~~~~.....^^^....*.~~~~~~~~~~~~~~
-~~..^^^..**.~~~.....^^.....*..~~~~~~~~~~~~~
-~.^^^.....**...............*.........~~~~~~
-~^^^^^.....*...............*........rr..~~~
-^^^^^^.....**..............*........r....~~
-^^^^^^^^.....**............***.....rr......
-~.^^..........****...........*....rr.......
-~~...............****........*.rrrr......~~
-~~~~................**.......rr..........~~
-~~~~~~~~~~...........**rrr..rr...........~~
-~~~~~~~~~~...........rrr.rrrr*...~~~~~~~~~~
-~~~~~~~~~~..........rr.*.....*...~~~~~~~~~~
-~~~~~~~~~...........r..**....*...~~~~~~~~~~
-~~~~~~~~~rrrrrrrrrrrr...***..***..~~~~~~~~~
-~~~~~~~~~.........rr......**...**..~~~~~~~~
-~~~~~~~~.........rr........*....**.~~~~~~~~
-~~~~~..........rr..........**....**.~~~~~~~
-~~~~..........rr............*.....**..~~~~~
-~...........rrr.............**.....**..~~~~
-~..........rr.......................**.~~~~
-..........rr.....~~~~~~~~..............~~~~
-.........rr....~~~~~~~~~~.~~...........~~~~
-~.....rrrr..~~~~~~~~~~~~~~~~........~~~~~~~
-~....rr~~~~~~~~~~~~~~~~~~~~~.......~~~~~~~~
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~....~~~~~~~~~~
-
-    
+xxxxxxxxxxxxxxxxxxxxxxxxx.......xxxrrrrrxxxxxxxxxxxxxxxxxxxx    
+xxxxxxxxxxxxxxxxxrrrrr........rrrrrrxxxrrrrrxxrrrrrxxxrrrrrr
+xx~~~~~~~~xxx........rr....rrr.^^^^^xxxxxxxrrrrxxxrrrrrxxxxx
+xxxx~~~~~~~xxx........rrrrr..^^^^^^^^^..xxxxxxxxxxxxxxxxxxxx
+xxxxxxx~~~rrrxxx..............^^^^^^^^^^....*xxxxxxxxxxxxxxx
+..xxx.....xxxrrxx................^^^^^^^....*.xxxxxxxxxxxxxx
+............xxrrrrr..^^^..**......^^^^^.....*..xxxxxxxxxxxxx
+x.......R.........rr^^.....**.......^^^.....*.........xxxxxx
+xx................^rrr^.....*.......^^......*............x88
+xxxxx............^^^^rrrrr..**..............*....T....rrrr~8
+xxxxxxxx......xxx^^^^^^^^rrrr.**.....W......***..rrrrrr....9
+xxxxxxxxxx..xxxxx..^^.......rrr****...........*rrr........Y8
+xxxxxxxxxxxxxxxxx~............rrr.****......rrrr..........88
+xxxxxxxxxxxxxxxxx~~.....O.......rrrr.**...rrr.............xx
+xxxxxxxxxxxxxxxxx~.................rrr**rrr...............xx
+xxxxxxxxxxxxxxxxx..................r.rrrr.....*...xxxxxxxxxx
+xxxxxxxxxxxxxxxxx.......I.........rr.Q..*.....*...xxxxxxxxxx
+xxxxxxxxxxxxxxxx.................rr.....**....*...xxxxxxxxxx
+xxxxxxxxxxxxxxx..............rrrrr.......***..***..xxxxxxxxx
+xxxxxxxxxxxxx...........Errrrr.............**...**..xxxxxxxx
+xxxxxxxxxxx.........rrrrrr..................*....**.xxxxxxxx
+xxxxxxx............rr.......................**....**.xxxxxxx
+xxxxxx............rr.........................*.....**..xxxxx
+xxxxxx..........rrr..........................**.....**..xxxx
+xxxxx.......xxxrr..............................U.....**.xxxx
+xxx..........xxxr.................xxxxxxxx..............xxxx
+xx....P.....xxxxrr..............xxxxxxxxxx..x...........xxxx
+xxxx.......xxxxxr..rrrr......xxxxxrrrrrxxxxxx........xxxxxxx
+xxxxxxxxxxxxxxxxrrrxxxxrrrrrxxxxrrrxxxrrrxxxx.......xxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxrrrrrrxxxxxxxrrxxxx....xxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxrrxxxxxxxxxxxxxxxxx
     </div>
 
       <body>
