--- a/contaePages/naContae22.html
+++ b/contaePages/naContae22.html
@@ -6,33 +6,36 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-888888888z...~~~~.......~~~~~~~~~~~~~~~~~~~~~
-8888888888z..........^^...~~~~~~~~~~~~~~~~~~~
-888z....88......^^^^^^^^....~~~~~~~~~~~~~~~~~
-88z...........^^^^^^^.^^........~~~~~~~~~~~~~
-88z..8.....rr.^^***^^^..........~~~~~~~~~~~~~
-8z...8....rrr****^*^............~~~~~~~~~~~~~
-888888z..*****^^^.***..*****....~~~~~~~~~~~~~
-88z...8***....^^....****rrr*****...****~~~~~~
-z......**...^^^^^^^^^...rrrrr..*****...~~~~~~
-........***..^^^^^^^^^^..rrrrrr...*.........~
-z.........*...^^^^^^^^^^^^rrrrrr..***........
-8888888z....^^^^^^^^^.^^^^^.^.......**.......
-888888888z..^^^^^^....^^^.^^^..rrr^..***.....
-888888888z..^^..8z.............rrr^^^..*...~~
-888888888z....888z.............^^^^^^^.**...~
-88888888888888888z.............^^^^^^^^.***..
-8888888888888888888z.**................**....
-88888888888888888z~...****...rrrr....***.....
-888888888888z........^**^***rrrrr****........
-8888888888z.......^****^^^^*******..**.......
-888888888z.....^^***^^^^^^rrrr.......*.....~~
-888888888z....^^^*^^^^^^^rrrrr.......*...~~~~
-8888888888z...^^^^^^^^^^^rrrr.........~~~~~~~
-888888888888z........^^^^^...........~~~~~~~~
-888888888888888888888z~.rr^^^........~~~~~~~~
-888888888888888888888z~~rr.........~~~~~~~~~~
-~~~~~~~~~~~~~~~~~~~~~~~~.rr......~~~~~~~~~~~~
+8888888887889888888z...~~~~.......888888888xxxxxxxxxxxxxxxxxxxxxxxxx
+88888z...88.88898888z..........^^...888888xxxxxxxxxxxxxxxxxxxxxxxxxx
+888z.......88z....8zE.....^^R^^^^^....888xxxxxxxxxxxxxxx....xxxxxxxx
+8z....88898.z...........^^^^^^^.^^..T888xxxxxxxxxxxxxxxxx....xxxxxxx
+8z..W8888878z..8.....rr.^^***^^^.888888xx..xxxxxxxxxxx.........xxxxx
+88888888898z...7....rrr****^*^...88888......xxxxxxx~............xxxx
+8888..8888878878z..*****^^^.***..*****.....xxxxx.................xxx
+.....8888888z...8***....^^....****rrr*****O..****.......xxxxxxP..xxx
+z....8.888z......**...^^^^^^^^^...rrrrr..*****.........xxxxxxxxxxxxx
+8z..Q..888........***..^^^^^^^^^^..rrrrrr...*..............xxxxxxxxx
+8z..8...88z.........*...^^^^^^^^^^^^rrrrrr..***............xxxxxxxxx
+88z.8..8.88988888z....^^^^^^^^^.^^^^^.^.......**............xxxxxxxx
+8888888888888888888z..^^^^^^....^^^.^^^..rrr^..***.............xxxxx
+8888888888888888788z..^^..8..............rrr^^^..*............xxxxxx
+8888888988888898888z....898z.............^^^^^^^.**..........xxxxxxx
+888888888888888889888788888z.I...........^^^^^^^^.***......xxxxxxxxx
+888888z..88888888888888897888z.**................**........xxxxxxxxx
+88888z....888888z......8888z....****...rrrr....***.........xxxxxxxxx
+888888788888z..................^**^***rrrrr****.............xxxxxxxx
+88888888888z................^****^^^^*******..**................xxxx
+8888888788z..............^^***^r^^^^rrrr.......*...............xxxxx
+88888898888z............^^^*^^rr^^^rrrrr.......*..............xxxxxx
+888888888888z...........^^^^rrrr^^^rrrr........................xxxxx
+8888888878888z............U..rr^^^^^...Y......................xxxxxx
+8888zxxx888788z.............rrr.~.rr^^^......................xxxxxxx
+88888zxxxxxxxxxxxx......xxxxrr..~~rr.......................xxxxxxxxx
+888zxxxxxxxxxxxxxxxxxxxxxxxxxx.....rr..................xxxxxxxxxxxxx
+8zxxxxxxxxxxxxxxxxxxxxxxxxxxxx..........T........xxxxxxxxxxxxxxxxxxx
+88zxxxxxxxxxxxxxxxxxxxxxxxxx...................xxxxxxxxxxxxxxxxxxxxx  
+88zx8xxxxxxxxxxxxxxxxxxxxxxxx................xxxxxxxxxxxxxxxxxxxxxxx    
     </div>
 
       <body>
