--- a/contaePages/naContae20.html
+++ b/contaePages/naContae20.html
@@ -7,36 +7,36 @@
     </head>
     <div id="mapdata">
 
-888888888808888888888888888888z.......~~~~~~~~~~
-8888888888888888888888888888z............~~~~~~~
-8888888888888888887888888888z..............~~~~~
-8888888889888888888888888888z...........*....~~~
-88888888888888888888888888z............**^...~~~
-88888888888088888888z................***^^..~~~~
-888888888888898888888z.............***.^^...~~~~
-8888888888888888888888z...........**.^^^...~~~~~
-8888888088888888888888z...........*.^^^^...~~...
-8889888888888888878888z..........**^^^^^.^......
-88888888888888888888888888z.....**.^^^^^^^......
-88z..........88..................*******^^^....~
-8z......^^^......********^............**^^....~~
-8z.....^^^^^^^****^^^^^^^^............*^^...~~~~
-z...*******88**...88^^^^^.............**...~~~~~
-z........8888888888z..^^^..............*..~~~~~~
-......8888887888z.....^^^...*******....*^..~~~~~
-888888888888888z...........**.r.^^**....*^..~~~~
-888898888888z.......*******rrrrr^^.*^...*^..~~~~
-88888888z.......****..^^^^MrrrrrM***....*^..~~~~
-88888z........***..^^MMMMMMMMMMM^*.....**^..~~~~
-88z..........**..MMMMMMMMM^^^^^***....**^^..~~~~
-88.888888...^**MMMMMMMM.********.******^^...~~~~
-8888988z...^^.**********.............^^^...~~~~~
-888888z.^^^^......................^^^.^....~~~~~
-8888z..^^....88............88....^^......~~~~~~~
-888z......8888......88888888....^.....~~~~~~~~~~
-8888888880888z....888888888.....^..~~~~~~~~~~~~~
-888889888888z...888888888........~~~~~~~~~~~~~~~
-88888888888888888887888z.......~~~~~~~~~~~~~~~~~
+88888888888808888888888888888888z.........................xxxxxxxxxx
+88888888888888888888z^........rr..........I.................xxxxxxxx
+888888888888888888z.^^...^^^....rrrr....^^.......^............xxxxxx
+888888888889888z^^^..^^.....^^.....rr^^...*....^^...^^.......xxxxxxx
+88888888888888888888z^^..........^^^rrrrr**^.^^^^^^.^^......xxxxxxxx
+88888888888880888888z...^^^...^^^......***rrrrr^.^^^^.^^..rrrrrxxxxx
+88888888888888898888z.^^.....^^......***.^^.M^^rrr^rrrrrrrr.....xxxx
+8888888888888888888888z.............**.^^^.MMM^.^rrr^..^^........xxx
+888888888088888888888888z.......^^..*.^^^^...^^^^M^.............xxxx
+888889888888888^^8878888z..........**^^^~^MM....^^^^..^^^......xxxxx
+888888888z^^^^....8888888888zU....**.^^^^^^^M.^^^.^^MM^.......xxxxxx
+8888z..^^^..^^....^^^^..^^.........*******^^^.^MM^^^.MM.^^.....xxxxx
+888z...^..^^^^.OMM.********^.^^.........**^^.M^MM^^^^^^..........xxx
+888z......^..^MM****MMM^^^^^...^........*^^..^^.~^MMm^.^^..........x
+88z...*****R*88**MM.88^^MM^.............**^^^...^^^.^^^.............
+7.9z.......8888888888z..^^MM....MMM......*..^^^^.....^^............x
+z^89.^..8888887888z.....^^^...MM*****....*^.......^^^.............xx
+88888888888888888z...........**.rW^^**....*^..^^^^................xx
+88888898888888z.......*******rrrrr^^.*^...*^^^^^..^^....^^.........x
+8888888888zY......****..^^^QMrrrrrM***....*^.....................xxx
+8888888z........***..^^M^MMMMMMMMM^*.....**^.....^..............xxxx
+8888z..........**..M^MMMMMMM^^^^^***....**^^..............xxxxxxxxxx
+8888.888888...^**MMMMMMM^.********.******^^........x...xxxxxxxxxxxxx
+888888988z...^^.**********^^...88T.....^^^........xxxxxxxxxxxxxxxxxx
+88888888z.^^^^.............88888....^^^.^.......xxxxxxxxxxxxxxxxxxxx
+888888z..^^....88....E....88888....^^......xxxxxxxxxxxxxxxxxxxxxxxxx
+88888z......8888......88888888P...^.....xxxxxxxxxxxxxxxxxxxxxxxxxxxx
+888888888880888z....888888888.....^..xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+88888889888888z...888888888........xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+8888888888888888888887888z.......xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 
     
