--- a/contaePages/naContae21.html
+++ b/contaePages/naContae21.html
@@ -6,36 +6,37 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-~~~~~~~~~~~~~~~~~~~^^^~~~~~~~~~~~
-~~~~~~~~~~~~~~~~~.^^^^.~~~~~~~~~~
-~~~~~~~~~~~~~~~..^^^^^.~~~~~~~~~~
-~~~~~~~~~~~~~~...^^^^^..~~~~~~~~~
-~~~~~~~~~~~~~..^^^^^^^^.~~~~~~~~~
-~~~~~~~~~~~~...^.^^^^^^..~~~~~~~~
-~~~~~~~~~~~....^^^........~~~~~~~
-~~~~~~~~~~.................~~~~~~
-~~~~~~~~~....................~~~~
-~~~~~~~~.......................~~
-~~~~~~~..........................
-~~~~~~......................***..
-~~~~~............************...~
-~~~...**.........*.............~~
-~~.....**.......**............~~~
-~.......***...***............~~~~
-..........*****.*...........~~~~~
-r.....******.....*.........~~~~~~
-r....**..**......**.......~~~~~~~
-r....*..**........*......~~~~~~~~
-rr.**...*........**.....~~~~~~~~~
-~r.....**.......rr....~~~~~~~~~~~
-~rr....*.....rrrrrrrr~~~~~~~~~~~~
-~rr..**..rrrrr***...~~~~~~~~~~~~~
-~~r..rrrrrrr***....~~~~~~~~~~~~~~
-~~r.rrrrr~~.*...~~~~~~~~~~~~~~~~~
-~~rrrrr~....~~~~~~~~~~~~~~~~~~~~~
-~~rr~....~~~~~~~~~~~~~~~~~~~~~~~~
-~~rr..~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx....xxxxxxxxxxxxxxxxxxxxxxxxxxxxx        
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx....^^^..xxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx....^^^^...xxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx...^^^^^.....xxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxx......^^^^^..^...xxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxx........^^^^^^^^..^......xxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxx......^..^.^^^^^^^^..........xxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxx......^^^^^^^^..^^^.....^^......xxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxx.....^^^^...^^^^^...^^^^^........*...xxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxE............^^^..^^^^^..........**.......xxxxxx
+xxxxxxxxxxxxxxxxxxx.........^^^^rrrr^^^^^.......I...**..........xxxx
+xxxxxxxxxxxxxxxxxx........rrrrrrr..rrrrrrrrrrr....***............xxx
+xxxxxxxxxxxxxxxx..R....rrr....................rrrr*..............xxx
+xxxxxxxxxxxxxxxx.....rr.........................**rrrrrrrrrrrxxxxxxx
+xxxxxxxxxxxxxx..Y..Tr..........................**........xxxxxxxxxxx
+xxxxxxxxxxxxx......r........................****.......xxxxxxxxxxxxx
+xxxxxxxxxxxx.......~Q...................*****.......xxxxxxxxxxxxxxxx
+xxxxxxxxxx.........~.....W.............**.........xxxxxxxxxxxxxxxxxx
+xxxxxxxxxx........~~.................***..........xxxxxxxxxxxxxxxxxx
+xxxxxxxxx..P......~.....Y...........**.............xxxxxxxxxxxxxxxxx
+xxxxxxxxx........~~.................*.............xxxxxxxxxxxxxxxxxx
+xxxxxxxxx........~.r...............**............xxxxxxxxxxxxxxxxxxx
+xxxxxxxxx........~.r...........U..**..........xxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxx.......~.rr.............*..........xxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxx......~~~r...........***........xxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxx...~~~~......~~~*........xxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxx.....~~~..~~~*~~~~~~~~~~xxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxx......~~~~.**......xxx~~~~xxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxx.........**....xxxxxxxxx~~~~xxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxx.....O.*....xxxxxxxxxxxxx~~~~~xxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxx.*xxxxxxxxxxxxxxxxxxxxx~xxxxxxxxxxxxxxxxx
 
     
     </div>
